# rust-fn-dsa

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
fn-dsa/: Cargo.toml
fn-dsa-comm/: Cargo.toml
fn-dsa-comm/src/: codec.rs  lib.rs  mq.rs  mq_avx2.rs  shake.rs  shake256x4_avx2.rs
fn-dsa-kgen/: Cargo.toml
fn-dsa-kgen/src/: gauss.rs  lib.rs  ntru.rs  ntru_avx2.rs  poly.rs  poly_avx2.rs  vect.rs  vect_avx2.rs
fn-dsa-sign/: Cargo.toml
fn-dsa-sign/src/: flr.rs  flr_emu.rs  flr_native.rs  lib.rs  poly.rs  poly_avx2.rs  sampler.rs  sampler_avx2.rs  sign_avx2.rs
fn-dsa-vrfy/: Cargo.toml
fn-dsa-vrfy/src/: lib.rs
fn-dsa/benches/: keygen.rs  sign.rs  util.rs  verify.rs
fn-dsa/src/: lib.rs
