[package]
name = "fn-dsa-sign"
version = "0.3.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fn-dsa-comm = { version = "0.2", path = "../fn-dsa-comm" }
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true

[features]
default = []
small_context = []
no_avx2 = []
div_emu = []
sqrt_emu = []
shake256x4 = []
