[package]
name = "fn-dsa-sign"
version = "0.3.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fn-dsa-comm = { version = "0.3", path = "../fn-dsa-comm" }
rand_core = { workspace = true, optional = true, features = ["getrandom"] }
rand_chacha = { workspace = true, optional = true }
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true

[features]
default = []
small_context = []
no_avx2 = []
div_emu = []
sqrt_emu = []
shake256x4 = []
eth_falcon = ["fn-dsa-comm/eth_falcon", "rand_chacha", "rand_core"]
